--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,15 @@
     font-size: 2rem;
     margin-top: 20%;
 }
+
+.App-title {
+    font-size: 4rem;
+}
+
+.Clock-days,
+.Clock-hours,
+.Clock-minutes,
+.Clock-seconds {
+    display: inline;
+    margin: 1rem;
+}
